# coral

./: README.md  pyproject.toml
coral/: agent.py  bot.py  config.py  core.py  history.py  main.py  prompts.py  utils.py
